--- a/openscienceliterature.ipynb
+++ b/openscienceliterature.ipynb
@@ -19,7 +19,11 @@
     "\n",
     "# Bibliometric probing of the concept 'open science' - a notebook\n",
     "\n",
-    "<br>by [Christopher Kullenberg](http://www.christopherkullenberg.se/about/) (2017)</br>\n",
+    "<br>\n",
+    "\n",
+    "by [Christopher Kullenberg](http://www.christopherkullenberg.se/about/) (2017)\n",
+    "\n",
+    "</br>\n",
     "\n",
     "\n",
     "### Contents\n",
