--- a/openscienceliterature.ipynb
+++ b/openscienceliterature.ipynb
@@ -8,11 +8,9 @@
     "<p>\n",
     "    <a href=\"https://commons.wikimedia.org/wiki/File:Open_Science_-_Prinzipien.png#/media/File:Open_Science_-_Prinzipien.png\"><img src=\"https://upload.wikimedia.org/wikipedia/commons/9/9c/Open_Science_-_Prinzipien.png\" alt=\"Open Science - Prinzipien.png\" width=\"400\"></a>\n",
     "    <br>\n",
-    "        <center>\n",
-    "          <small>Image by <a href=\"//commons.wikimedia.org/wiki/User:Gegensystem\" title=\"User:Gegensystem\">Andreas E. Neuhold</a> - <span class=\"int-own-work\" lang=\"en\">Own work</span>, <a href=\"http://creativecommons.org/licenses/by/3.0\" title=\"Creative Commons Attribution 3.0\">CC BY 3.0</a>, <a href=\"https://commons.wikimedia.org/w/index.php?curid=33542838\">Link</a>\n",
-    "           </small>\n",
-    "         </center>       \n",
     "</p>\n",
+    "\n",
+    "<center>Image by [Andreas E. Neuhold](http://commons.wikimedia.org/wiki/User:Gegensystem), CC BY 3.0</center>\n",
     "\n",
     "\n",
     "\n",
