--- a/openscienceliterature.ipynb
+++ b/openscienceliterature.ipynb
@@ -10,7 +10,7 @@
     "    <br>\n",
     "</p>\n",
     "\n",
-    "<center>Image by [Andreas E. Neuhold](http://commons.wikimedia.org/wiki/User:Gegensystem), CC BY 3.0</center>\n",
+    "Image by [Andreas E. Neuhold](http://commons.wikimedia.org/wiki/User:Gegensystem), CC BY 3.0\n",
     "\n",
     "\n",
     "\n",
