--- a/openscienceliterature.ipynb
+++ b/openscienceliterature.ipynb
@@ -10,18 +10,19 @@
     "    <br>\n",
     "</p>\n",
     "\n",
-    "Image by [Andreas E. Neuhold](http://commons.wikimedia.org/wiki/User:Gegensystem), CC BY 3.0\n",
+    "<center>Image by [Andreas E. Neuhold](http://commons.wikimedia.org/wiki/User:Gegensystem), CC BY 3.0</center>\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "# Bibliometric probing of the concept 'open science' - a notebook\n",
     "\n",
-    "<br>\n",
     "\n",
     "by [Christopher Kullenberg](http://www.christopherkullenberg.se/about/) (2017)\n",
     "\n",
-    "<br>\n",
+    "\n",
+    "**Abstract.** *To date there is only a small number of scientific articles that have been written on the topic of \"open science\", considering the recent trend in science policy and public discourse. The Web of Science only contains 544 records with the term \"open science\" in the title, keywords or abstract, and Scopus ammounts to 769 records. Based on article keywords, open science is primarily connected with the concepts of \"open access\", \"open data\", \"reproducible research\", and \"data sharing\". It occurs most frequently in biomedical-, interdisciplinary- and natural science journals, however, some of the most cited articles have been published in science policy journals.*\n",
+    "\n",
     "\n",
     "\n",
     "### Contents\n",
@@ -50,6 +51,12 @@
     "\n",
     "### 2. Method\n",
     "Since open science is very loosely defined and can have multiple meanings, it is difficult to craft a precise search string in the bibliometric databases. Thus, in this notebook, I probe recursively into the Web of Science and Scopus databases with recursive searches (See [Kullenberg & Kasperowski 2016](http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0147152#sec006)) to generate search terms that can be relevant for getting a better picture of the open science phenomenon. \n",
+    "\n",
+    "|Database|Records|\n",
+    "| --- | --- |\n",
+    "| Web of Science | 544 |\n",
+    "| Scopus 1st search| 769 |\n",
+    "| Scopus 2nd search| 14.146 |\n",
     "\n",
     "The recursive search works as follows. First each database is queried in the abstract, title and keywords with the search term \"open science\". Then the keywords of this first database is analysed in terms of frequency and co-occurrence. This gives a first overview of what other keywords are relevant. \n",
     "\n",
