--- a/openscienceliterature.ipynb
+++ b/openscienceliterature.ipynb
@@ -21,8 +21,7 @@
     "by [Christopher Kullenberg](http://www.christopherkullenberg.se/about/) (2017)\n",
     "\n",
     "\n",
-    "**Abstract.** *To date there is only a small number of scientific articles that have been written on the topic of \"open science\", considering the recent trend in science policy and public discourse. The Web of Science only contains 544 records with the term \"open science\" in the title, keywords or abstract, and Scopus ammounts to 769 records. Based on article keywords, open science is primarily connected with the concepts of \"open access\", \"open data\", \"reproducible research\", and \"data sharing\". It occurs most frequently in biomedical-, interdisciplinary- and natural science journals, however, some of the most cited articles have been published in science policy journals.*\n",
-    "\n",
+    "**Abstract.** *To date there is only a small number of scientific articles that have been written on the topic of \"open science\", at least when considering the recent trend in science policy and public discourse. The Web of Science only contains 544 records with the term \"open science\" in the title, keywords or abstract, and Scopus ammounts to 769 records. Based on article keywords, open science is primarily connected with the concepts of \"open access\", \"open data\", \"reproducible research\", and \"data sharing\". It occurs most frequently in biomedical-, interdisciplinary- and natural science journals, however, some of the most cited articles have been published in science policy journals.*\n",
     "\n",
     "\n",
     "### Contents\n",
@@ -34,12 +33,11 @@
     "  1. The semantic connections: keywords\n",
     "  2. Most cited articles\n",
     "  3. Most common journals\n",
-    "4. Code and Data\n",
+    "4. Code, data and figures. \n",
     "  1. Web of Science, recursion 1. \n",
     "  2. Scopus, recursion 1. \n",
     "  3. Scopus, recursion 2.\n",
     "  \n",
-    "\n",
     "\n",
     "### 1. Introduction\n",
     "The purpose of this notebook is to produce an overview of scientific literature related to the phenomenon of *open science*. This is a preliminary research note, not a definite result. Feel free to use and modify this notebook in anyway you want, as long as you cite it as follows:\n",
