--- a/openscienceliterature.ipynb
+++ b/openscienceliterature.ipynb
@@ -18,7 +18,9 @@
     "# Bibliometric probing of the concept 'open science' - a notebook\n",
     "\n",
     "\n",
-    "by [Christopher Kullenberg](http://www.christopherkullenberg.se/about/) (2017)\n",
+    "by [Christopher Kullenberg<sup>1</sup>](http://www.christopherkullenberg.se/about/) (2017)\n",
+    "\n",
+    "E-mail: christopher#kullenberg§gu#se \n",
     "\n",
     "\n",
     "**Abstract.** *To date there is only a small number of scientific articles that have been written on the topic of \"open science\", at least when considering the recent trend in science policy and public discourse. The Web of Science only contains 544 records with the term \"open science\" in the title, keywords or abstract, and Scopus ammounts to 769 records. Based on article keywords, open science is primarily connected with the concepts of \"open access\", \"open data\", \"reproducible research\", and \"data sharing\". It occurs most frequently in biomedical-, interdisciplinary- and natural science journals, however, some of the most cited articles have been published in science policy journals.*\n",
@@ -42,7 +44,7 @@
     "### 1. Introduction\n",
     "The purpose of this notebook is to produce an overview of scientific literature related to the phenomenon of *open science*. This is a preliminary research note, not a definite result. Feel free to use and modify this notebook in anyway you want, as long as you cite it as follows:\n",
     "\n",
-    "    Kullenberg, Christopher (2017) \"Bibliometric probing of the concept 'open science' - a notebook\", https://github.com/christopherkullenberg/openscienceliterature, accessed YY-MM-DD. \n",
+    "<sup>1</sup> *Kullenberg, Christopher (2017) \"Bibliometric probing of the concept 'open science' - a notebook\", https://github.com/christopherkullenberg/openscienceliterature, accessed YY-MM-DD.* \n",
     "    \n",
     "This notebook uses bibliometric data from the Web of Science and Scopus databases. Since these databases are proprietary and require a subscription, the source data cannot be redistributed here. However, the search strings and dates of retrieval are noted each time a dataset is used, so if you have access to these databases, it should be quite possible to replicate every step. \n",
     "\n",
